language and alignment corrections

--- a/components/home/mission.module.css
+++ b/components/home/mission.module.css
@@ -8,7 +8,6 @@
 }
 
 .description {
-	max-width: rem(1000px);
 	margin: auto;
 
 	&::after {
